--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "projeto15-bookhouse-back",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/app.js",
+    "dev": "npx nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,9 +22,15 @@
   "homepage": "https://github.com/yurilopesmdv/projeto15-bookhouse-back#readme",
   "dependencies": {
     "axios": "^1.3.6",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.2",
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
